fixed misalignment of address icon in footer

--- a/modules/Layout/Boilerplate/Boilerplate.module.scss
+++ b/modules/Layout/Boilerplate/Boilerplate.module.scss
@@ -54,7 +54,7 @@
     @include text-label;
 
     display: flex;
-    align-items: center;
+    align-items: flex-start;
 
     .icon {
         margin-right: $spacing-1;
